# rocksmith_tutor

./: CLAUDE.md  README.md  TODO.md  pyproject.toml
docs/: cdlc-pipeline.md
rocksmith_tutor/: __main__.py  catalog.py  cli.py  config.py  curriculum.py  jellyfin.py  llm.py  profile.py  recommend.py  reslice.py  scanner.py  teaching.py  techniques.py  validate.py
